added to my README.md file and i also added more to my css and html and tried doing some trouble shooting on issues i was running into trying to get javascript in as soon as i can

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         </div>
         </div>
 <!--quiz!!!-->
+
 <div class="quizitems">
     <header>
     <div class="title">Coding quiz </div>
@@ -35,17 +36,22 @@
         <div class="time-sec"> 60</div>
     </div>
     </header>
+
     <section>
     <div class="question">
         <span>Where do we put the javascript in HTML?</html></span>
     </div>
-    <div class="options">
+    <div class="optionliszt">
         <div class="option"></div>
-        <span>Header</span>
+        <span>Head</span>
         <div class="correct">✅</div>
-        <div class="incorrect">❌</div>
+        <div class="option"></div>
+        <span>Body</span><div class="incorrect">❌</div>
+        <div class="option"></div>
+        <span>Footer</span>
+        <div class="option"></div>
+        <span>in its own place</span>
     </div>
-
     </section>
 
     <footer>
